<resources>
    <string name="app_name">APK Encryptor</string>
    <string name="emulator_check">虚拟机检测</string>
    <string name="xposed_check">Xposed检测</string>
    <string name="root_check">ROOT检测</string>
    <string name="vpn_check">抓包检测</string>
    <string name="choose_apk">选择APK</string>
    <string name="advanced_options">高级选项</string>
    <string name="thread_count">线程数:</string>
    <string name="encrypt_only_selected_classes">仅加密选中的类</string>
    <string name="no_apk_file_selected">当前未选择APK文件</string>
    <string name="keystore_file_does_not_exist">私匙文件不存在</string>
    <string name="single_dex_encryption">单DEX加密（启动速度快）</string>
    <string name="multi_dex_encryption">多DEX加密（启动速度慢）</string>
    <string name="please_choose_an_encryption_method">请选择加固方式</string>
    <string name="select_the_file">选择文件</string>
    <string name="cancel">取消</string>
    <string name="please_select_a_file_with_x_suffix">请选择后缀为%s的文件</string>
    <string name="installed">已安装</string>
    <string name="ok">确定</string>
    <string name="please_select_the_package_name_to_be_processed">请选择需要处理的包名</string>
    <string name="loading">加载中...</string>
    <string name="keystore_file_path">私匙文件路径</string>
    <string name="keystore_password">私匙密码</string>
    <string name="cert_alias">证书别名</string>
    <string name="cert_password">证书密码</string>
    <string name="encrypt_apk">加固</string>
    <string name="string_encryption">字符串加密</string>
    <string name="set_the_signature_private_key">设置签名私匙</string>
    <string name="set_up_successfully">设置成功</string>
    <string name="custom_signature_private_key">自定义签名私匙</string>
    <string name="signature_private_key">签名私匙</string>
    <string name="use_this_private_key_to_sign_APK_after_processing_apk">处理apk后使用此私匙来给apk签名</string>
    <string name="configure_signature_private_key">配置签名私匙</string>
    <string name="other">其它</string>
    <string name="language">语言</string>
    <string name="change_the_interface_language_of_software">更换软件的界面语言</string>
    <string name="welcome_to_APK_Encryptor">欢迎使用APK Encryptor-</string>
    <string name="string_encryption_features_in_this_version">此版本字符串加密特点：\n</string>
    <string name="encrypt_with_a_random_key">-使用随机密匙进行加密\n</string>
    <string name="assign_a_method_to_each_character">-每个字符分配一个方法\n</string>
    <string name="total_free_memory">手机剩余内存：</string>
    <string name="allocated_memory">当前分配内存:</string>
    <string name="remaining_memory">当前剩余内存:</string>
    <string name="start_encrypting">开始加密</string>
    <string name="the_maximum_number_of_threads_cannot_exceed_32">最大线程数不能超过32</string>
    <string name="please_input_the_correct_number_of_threads">请填入正确线程数</string>
    <string name="the_apk_file_had_broken">APK文件已损坏</string>
    <string name="string_encryption_in_progress">正在进行字符串加密:</string>
    <string name="collecting_strings">正在收集字符串</string>
    <string name="file_out_puting">正在输出文件:</string>
    <string name="finished_processing">处理完毕</string>
    <string name="processing_character">正在处理字符：</string>
    <string name="processing_method_collection">正在处理方法集合</string>
    <string name="running">正在运行</string>
    <string name="compiling">正在编译:</string>
    <string name="encrypted_successfully">加密完成</string>
    <string name="install">安装</string>
    <string name="the_output_file_is_saved_to_the_following_path">文件已输出到以下路径:</string>
    <string name="parsing_apk">正在解析APK</string>
    <string name="processing_axml">正在处理AndroidManifest.xml</string>
    <string name="encrypting_dex">正在加密dex</string>
    <string name="saving_file">正在保存数据</string>
    <string name="signing_apk">正在签名</string>
    <string name="finished_encrypting">加固完成</string>
    <string name="settings">设置</string>
    <string name="check_for_updates">检测更新</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="already_the_latest_version">已经是最新版本</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="download_failed">下载失败</string>
    <string name="version_update_prompt">版本更新提示</string>
    <string name="update_with_browser">使用浏览器更新</string>
    <string name="update">更新</string>
    <string name="downloading_latest_version">正在下载最新版本</string>
    <string name="tips">温馨提示</string>
    <string name="checking_for_updates">正在检测更新</string>
    <string name="QQ_not_installed">未安装手Q或安装的版本不支持</string>
    <string name="warn">警告</string>
    <string name="grant_permission">授予权限</string>
    <string name="deny_permission">拒绝授权</string>
    <string name="request_permission_tip">由于本应用需要获取存储权限，为了处理文件；如果没有储存权限，你将无法使用本软件。</string>
    <string name="open_source_license">开放源代码许可</string>
    <string name="more">更多</string>
    <string name="logout">注销</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="signup">注册</string>
    <string name="email">邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_can_not_be_empty">输入不能为空</string>
    <string name="the_two_passwords_are_inconsistent">两次输入密码不一致</string>
    <string name="please_input_the_correct_email_address">请输入正确的邮箱地址</string>
    <string name="the_network_is_busy">网络连接失败</string>
    <string name="error">错误</string>
    <string name="please_input_the_6_digit_verification_code_you_received">请输入你收到的6位数验证码:</string>
    <string name="are_you_sure_you_want_to_logout">你确定要注销登陆吗？</string>
    <string name="send_code_signup">为了注册，我们将会向你的邮箱发送一个6位数的验证码。</string>
    <string name="signup_successfully">注册成功</string>
    <string name="code">验证码</string>
    <string name="send_code_change_pass">为了修改密码，我们将会向你的邮箱发送一个6位数的验证码。</string>
    <string name="input_email_tip">为了修改密码，请输入你的电子邮件地址:</string>
    <string name="input_new_password_tip">请输入新密码:</string>
    <string name="open_vip">开通VIP</string>
    <string name="user_info">用户信息</string>
    <string name="signup_time">注册时间</string>
    <string name="last_login_time">最后登录时间</string>
    <string name="create_keystore">创建私匙</string>
    <string name="the_file_has_existed">文件已存在</string>
    <string name="file_save_path">文件保存路径</string>
    <string name="cert_validity_years">证书有效年份</string>
    <string name="cert_signature_algorithm">证书签名算法</string>
    <string name="full_name">姓名</string>
    <string name="organization">组织</string>
    <string name="organizational_unit">组织单位</string>
    <string name="country">国家</string>
    <string name="create">创建</string>
    <string name="create_successfully">生成成功</string>
    <string name="please_input_the_key_to_activate">请输入激活卡密:</string>
    <string name="buy_key">购买卡密</string>
    <string name="activate">激活</string>
    <string name="resource_encryption">资源加密</string>
    <string name="finished_in">耗时:</string>
    <string name="log">日志</string>
    <string name="renew_vip">续费VIP</string>


</resources>
