<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <EditText
        android:id="@+id/dialog_keyinfo_path"
        android:hint="@string/keystore_file_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/dialog_keyinfo_keystorePw"
        android:hint="@string/keystore_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/dialog_keyinfo_certAlias"
        android:hint="@string/cert_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/dialog_keyinfo_certPw"
        android:hint="@string/cert_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>