<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/item_app_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_login_AppCompatEditText_account"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_login_AppCompatEditText_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_marginTop="10dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:onClick="onclick_startLogin"
                android:text="@string/login"
                android:theme="@style/ButtonTheme" />


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onclick_enter_forgetPass"
                android:text="@string/forget_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#10C2E3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onclick_enter_signup"
                android:text="@string/signup"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#10C2E3" />


        </FrameLayout>


    </FrameLayout>


</LinearLayout>