<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <TextView
        android:text="@string/please_input_the_key_to_activate"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/view_activate_key_AppCompatEditText_key"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>


    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <Button
            android:id="@+id/view_activate_key_Button_buyKey"
            android:layout_gravity="left"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_key"
            android:theme="@style/ButtonTheme" />


        <Button
            android:id="@+id/view_activate_key_Button_activate"
            android:layout_gravity="right"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate"
            android:theme="@style/ButtonTheme" />



    </FrameLayout>


    <TextView
        android:id="@+id/view_activate_key_TextView_price"
        android:text="价格:"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>